test/compile_errors/err_if_expr_missing_else_arg.w
//! expect-check-fail: if expression requires an else branch unless the then branch diverges

fn take_i32(x: i32) -> i32:
    x

fn main:
    let _x = take_i32(if true: 5)
